package gof23.adapter;

public interface Target {
    public void handlerReq();
}
