@startuml

interface Target
interface Adapter
class Adapter
class ConcreteTarget
class ConcreteAdaptee

interface Target {
    + request()
}

interface Adapter {
    + specificRequest()
}

class Adapter {
    - adaptee : ConcreteAdaptee
    - target : Target
    + Adapter (Target target)
    + Adapter (Adaptee adaptee)
    + request()
    + specificRequest()
}

class ConcreteAdaptee {
    + request()
}

class ConcreteTarget {
    + request()
}

Target <-- Adapter
Target <|... Adapter
Target <|... ConcreteTarget

Adaptee <-- Adapter
Adaptee <|... Adapter
Adaptee <|... ConcreteAdaptee

@enduml
